# divvy-click

./: .bazelrc  .bazelrc.user.template  .gitignore  BUILD.bazel  MODULE.bazel  README.md
Sources/DivvyClick/: AppConstants.swift  AppDelegate.swift  BUILD.bazel  CursorEngine.swift  CursorProviding.swift  DivvyClick.entitlements  GridOverlayView.swift  HotkeyManager.swift  Info.plist  KeyMap.swift  LayerState.swift  NavigationCoordinator.swift  NavigationEngine.swift  NavigationTarget.swift  OverlayWindowController.swift  ScreenProviding.swift  ScrollState.swift  main.swift
Tests/DivvyClickTests/: BUILD.bazel  KeyCodeTests.swift  KeyMapTests.swift  MockScreenProvider.swift  NavigationEngineTests.swift
docs/: dev-guide.md
docs/dev/: architecture.md  critique.md  feasibility-analysis.md
docs/release-notes.md/: release-notes-v0.1.0.md  release-notes-v0.2.0.md  release-notes-v0.3.0.md
tools/: package_dmg.sh
tools/format/: BUILD.bazel  multitool.lock.json
