"""
"""

load("@rules_apple//apple:macos.bzl", "macos_application")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

macos_application(
    name = "DivvyClick",
    bundle_id = "house.rivers.programming.divvy-click",
    entitlements = "//Sources/DivvyClick:DivvyClick.entitlements",
    infoplists = ["//Sources/DivvyClick:Info.plist"],
    minimum_os_version = "13.0",
    deps = ["//Sources/DivvyClick:main"],
)

sh_binary(
    name = "package_dmg",
    srcs = ["tools/package_dmg.sh"],
    args = ["$(location :DivvyClick.zip)"],
    data = [":DivvyClick.zip"],
)
