""" Bazel module containing laser cutting and woodwork schemas made by FreeCAD """

module(
    name = "divvy-click",
    version = "0.1.0",
)
bazel_dep(
    name = "aspect_rules_lint",
    version = "2.3.0",
    dev_dependency = True,
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.5.1",
    dev_dependency = True,
)
# Not required by the project,
# but the linter fails without it.
# It is a bug in the linter for sure.
bazel_dep(
    name = "rules_go",
    version = "0.60.0",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_multitool",
    version = "0.11.0",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_swift",
    version = "3.5.0",
    dev_dependency = True,
)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools/format:multitool.lock.json")
use_repo(multitool, "multitool")
