load("@rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "lib",
    srcs = glob(["*.swift"], exclude = ["main.swift"]),
    visibility = ["//visibility:public"],
)

swift_library(
    name = "main",
    srcs = ["main.swift"],
    deps = [":lib"],
    visibility = ["//visibility:public"],
)

exports_files(["Info.plist", "DivvyClick.entitlements"])
